{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 18,
  "lineage": "2db33667-72a0-680e-9c52-5236d095bf66",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc_id",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945116902499:vpc/vpc-069d202f6c6abf29a",
            "cidr_block": "10.126.132.128/25",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-09a0e2eab1e7b6400",
                "cidr_block": "10.126.132.128/25",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-1014e76a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Kansas_UAT_DMZ_VPC"
                ]
              }
            ],
            "id": "vpc-069d202f6c6abf29a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06bb4c1827d1fa0ad",
            "owner_id": "945116902499",
            "state": "available",
            "tags": {
              "Name": "Kansas_UAT_DMZ_VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "aws_security_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:loadbalancer/app/Symphony-MaintenancePage-ALB/ac7d401197251ffc",
            "arn_suffix": "app/Symphony-MaintenancePage-ALB/ac7d401197251ffc",
            "dns_name": "internal-Symphony-MaintenancePage-ALB-182980931.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:loadbalancer/app/Symphony-MaintenancePage-ALB/ac7d401197251ffc",
            "idle_timeout": 600,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Symphony-MaintenancePage-ALB",
            "security_groups": [
              "sg-047f95aa1f13d6728"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-045f15dc2d848718a"
              },
              {
                "subnet_id": "subnet-0c4816f7842153167"
              }
            ],
            "subnets": [
              "subnet-045f15dc2d848718a",
              "subnet-0c4816f7842153167"
            ],
            "tags": {
              "app_version": "1.0",
              "backup_frequency": "Never",
              "backup_vault": "-N/A-",
              "billing_type": "Client",
              "client_name": "Kansas",
              "environment_name": "Production",
              "os_name": "Amazon Linux 2",
              "os_type": "Linux",
              "project_name": "Symphony",
              "security_zone": "DMZ",
              "service_name": "EC2",
              "service_role": "MaintenancePage"
            },
            "vpc_id": "vpc-069d202f6c6abf29a",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener/app/Symphony-MaintenancePage-ALB/ac7d401197251ffc/967a81334a01fcbd",
            "certificate_arn": "arn:aws:acm:us-east-1:945116902499:certificate/981b7fa0-3b04-4995-bbb1-8b56446801a3",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Symphony-MaintenancePage-TG/ae2478299d934a36",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener/app/Symphony-MaintenancePage-ALB/ac7d401197251ffc/967a81334a01fcbd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:loadbalancer/app/Symphony-MaintenancePage-ALB/ac7d401197251ffc",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.aws_security_alb",
            "aws_alb_target_group.security-group",
            "aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "httptohttps",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener/app/Symphony-MaintenancePage-ALB/ac7d401197251ffc/c0443061c9586982",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener/app/Symphony-MaintenancePage-ALB/ac7d401197251ffc/c0443061c9586982",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:loadbalancer/app/Symphony-MaintenancePage-ALB/ac7d401197251ffc",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.aws_security_alb",
            "aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "security-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Symphony-MaintenancePage-TG/ae2478299d934a36",
            "arn_suffix": "targetgroup/Symphony-MaintenancePage-TG/ae2478299d934a36",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Symphony-MaintenancePage-TG/ae2478299d934a36",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Symphony-MaintenancePage-TG",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 300,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-069d202f6c6abf29a"
          },
          "dependencies": [
            "aws_alb.aws_security_alb",
            "aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945116902499:security-group/sg-047f95aa1f13d6728",
            "description": "Security Group for maintenance page setup",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-047f95aa1f13d6728",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Symphony_MaintenancePage_Linux-SG",
            "name_prefix": null,
            "owner_id": "945116902499",
            "revoke_rules_on_delete": false,
            "tags": {
              "app_version": "1.0",
              "backup_frequency": "Never",
              "backup_vault": "-N/A-",
              "billing_type": "Client",
              "client_name": "Kansas",
              "environment_name": "Production",
              "os_name": "Amazon Linux 2",
              "os_type": "Linux",
              "project_name": "Symphony",
              "security_zone": "DMZ",
              "service_name": "EC2",
              "service_role": "MaintenancePage"
            },
            "timeouts": null,
            "vpc_id": "vpc-069d202f6c6abf29a"
          }
        }
      ]
    }
  ]
}